# homelab-todoist-core

./: .gitignore  Jenkinsfile  README.md  pyproject.toml
src/todoist_core/: __init__.py  models.py  normalize.py  parsing.py  payloads.py  policy.py  selectors.py
tests/: test_payloads.py  test_policy.py
