[project]
name = "homelab-todoist-core"
version = "0.1.2"
description = "Shared Todoist core models/parsing/policy for homelab automation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Evan Rauner", email = "raunerevan@gmail.com" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todoist_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
